--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     <div class="container text-center">
     <div class="user-box">
     <img src="img/dhty.jpg">
-    <h1>Clement Wekesa</h1>
-    <p>Ios Developer</p>
-    <p>Electric Engineering</p>
-    <p>Swift</p>
-    <p>Objective C</p>
+    <h1>WekesaBuyahi</h1>
+    <p>Android Developer</p>
+    <p>Web Developer</p>
+    <p>Java | Spring | Spark | Docker | Postgress | Mysql | Firebase</p>
+    <p>Javascript | React | Angular | Express | Php | </p>
     </div>
     </div>
     <!-----------Scroll btn----------->
