--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Clementwekesa | portfolio</title>
+    <title>WekesaBuyahi | portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" >
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -37,7 +37,7 @@
     <!--------------Bootstrap nav-bar------------------>
             <div class="nav-bar">
             <nav class="navbar navbar-expand-lg">
-                    <a class="navbar-brand" href="#">DHwty</a>
+                    <a class="navbar-brand" href="#">Buyahi</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fa fa-bars"></i>
                     </button>
@@ -88,7 +88,7 @@
           <div class="card-body">
             <h5 class="card-title">Gist viewer</h5>
             <p class="card-text">User is able to login view comments,Projects,starred projects.</p>
-            <a href="#" class="btn btn-primary">view project on Github</a>
+            <a href="https://github.com/Blackscure/GistAViewer" class="btn btn-primary">view project on Github</a>
           </div>
         </div>
 
@@ -97,7 +97,7 @@
           <div class="card-body">
             <h5 class="card-title">Gym</h5>
             <p class="card-text">User is able to search Gym near him/her.</p>
-            <a href="#" class="btn btn-primary">view project on Github</a>
+            <a href="https://github.com/Blackscure/Afya-Gym" class="btn btn-primary">view project on Github</a>
           </div>
         </div>
       </div>
@@ -116,15 +116,15 @@
           <div class="row">
           <div class="col-md-4">
           <i class="fa fa-phone"></i>
-          <p>+254 27328026</p>
+          <p>+254 23468573</p>
           </div>
           <div class="col-md-4">
           <i class="fa fa-envelope"></i>
-            <p>Clementwek@gmail.com</p>
+            <p>wekesabuyahi@gmail.com</p>
             </div>
             <div class="col-md-4">
             <i class="fa fa-globe"></i>
-            <p>www.clement.com</p>
+            <p>www.yahi.com</p>
             </div>
             </div>
         </div>
