--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
     <!------------------Social Media Icons------------------->
       <div class="social-icons">
         <ul>       
-          <a href="https://www.linkedin.com/in/clementwekesa//" target="_blank"><li><i class="fa fa-linkedin"></i></li></>
-          <a href="https://github.com/clemwek"><li><i class="fa fa-github" target="_blank"></i></li></a>
+          <a href="https://www.linkedin.com/in/wekesa-buyahi-9819271a3/" target="_blank"><li><i class="fa fa-linkedin"></i></li></>
+          <a href="https://github.com/Blackscure"><li><i class="fa fa-github" target="_blank"></i></li></a>
         </ul>
       </div>
     <!-----------Resume------------>
