--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Clementwekesa | portfolio</title>
+    <title>WekesaBuyahi | portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" >
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -19,11 +20,11 @@
     <div class="container text-center">
     <div class="user-box">
     <img src="img/dhty.jpg">
-    <h1>Clement Wekesa</h1>
-    <p>Ios Developer</p>
-    <p>Electric Engineering</p>
-    <p>Swift</p>
-    <p>Objective C</p>
+    <h1>WekesaBuyahi</h1>
+    <p>Android Developer</p>
+    <p>Web Developer</p>
+    <p>Java | Spring | Spark | Docker | Postgress | Mysql | Firebase</p>
+    <p>Javascript | React | Angular | Express | Php | </p>
     </div>
     </div>
     <!-----------Scroll btn----------->
@@ -37,7 +38,7 @@
     <!--------------Bootstrap nav-bar------------------>
             <div class="nav-bar">
             <nav class="navbar navbar-expand-lg">
-                    <a class="navbar-brand" href="#">DHwty</a>
+                    <a class="navbar-brand" href="#">Buyahi</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fa fa-bars"></i>
                     </button>
@@ -62,8 +63,8 @@
     <!------------------Social Media Icons------------------->
       <div class="social-icons">
         <ul>       
-          <a href="https://www.linkedin.com/in/clementwekesa//" target="_blank"><li><i class="fa fa-linkedin"></i></li></>
-          <a href="https://github.com/clemwek"><li><i class="fa fa-github" target="_blank"></i></li></a>
+          <a href="https://www.linkedin.com/in/wekesa-buyahi-9819271a3/" target="_blank"><li><i class="fa fa-linkedin"></i></li></>
+          <a href="https://github.com/Blackscure"><li><i class="fa fa-github" target="_blank"></i></li></a>
         </ul>
       </div>
     <!-----------Resume------------>
@@ -88,7 +89,7 @@
           <div class="card-body">
             <h5 class="card-title">Gist viewer</h5>
             <p class="card-text">User is able to login view comments,Projects,starred projects.</p>
-            <a href="#" class="btn btn-primary">view project on Github</a>
+            <a href="https://github.com/Blackscure/GistAViewer" class="btn btn-primary">view project on Github</a>
           </div>
         </div>
 
@@ -97,7 +98,7 @@
           <div class="card-body">
             <h5 class="card-title">Gym</h5>
             <p class="card-text">User is able to search Gym near him/her.</p>
-            <a href="#" class="btn btn-primary">view project on Github</a>
+            <a href="https://github.com/Blackscure/Afya-Gym" class="btn btn-primary">view project on Github</a>
           </div>
         </div>
       </div>
@@ -116,15 +117,15 @@
           <div class="row">
           <div class="col-md-4">
           <i class="fa fa-phone"></i>
-          <p>+254 27328026</p>
+          <p>+254 23468573</p>
           </div>
           <div class="col-md-4">
           <i class="fa fa-envelope"></i>
-            <p>Clementwek@gmail.com</p>
+            <p>wekesabuyahi@gmail.com</p>
             </div>
             <div class="col-md-4">
             <i class="fa fa-globe"></i>
-            <p>www.clement.com</p>
+            <p>www.yahi.com</p>
             </div>
             </div>
         </div>
